--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "nodejs",
+  "name": "image-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API to generate profile images",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "canvas": "^2.11.2",
-    "express": "^4.19.2"
+    "canvas": "^2.9.0",
+    "express": "^4.18.2"
   }
 }
